# citect-tracker

./: .gitignore  LICENSE  README.md  build.bat  build.sh  citect-tracker.spec  entry_point.py  pyproject.toml
.github/workflows/: release.yml
src/citect_tracker/: __init__.py  __main__.py  app.py
src/citect_tracker/core/: dbf_reader.py  dbf_writer.py  diff_engine.py  models.py  project_discovery.py  snapshot_engine.py
src/citect_tracker/gui/: app_settings.py  diff_viewer.py  filter_bar.py  main_window.py  options_dialog.py  project_tree.py  record_detail.py  snapshot_panel.py  watchers.py  workers.py
src/citect_tracker/storage/: database.py
