[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "citect-tracker"
version = "0.1.0"
description = "Citect SCADA configuration change tracker - git-like diff for project configurations"
authors = [{name = "MSkjel"}]
requires-python = ">=3.12"
dependencies = [
    "PyQt5>=5",
    "xxhash>=3.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
citect-tracker = "citect_tracker.app:main"

[tool.setuptools.packages.find]
where = ["src"]
